# memguard

./: .gitignore  CHANGELOG.md  PRD.md  README.md  pyproject.toml  v0.2-SPEC.md
benchmarks/isb/: README.md  latest_results.json  latest_results_anthropic.json  latest_results_anthropic_off.json  latest_results_anthropic_on.json  llm_cases.json  render_svg.py  run.py
docs/: 3-zone-budget.md  compliance-observability.md
examples/: agent_loop.py  openai_agent_loop.py  openai_compatible_agent.py
src/instructionguard/: __init__.py  classifier.py  core.py  guard.py  llm.py  models.py  storage.py
src/memguard/: __init__.py  core.py  guard.py
tests/: test_benchmarks.py  test_guard.py  test_llm.py  test_memory.py
