[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instructionguard"
version = "0.3.0"
description = "Memory integrity layer for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["ai", "agent", "memory", "integrity", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/quanttraderkim/instructionguard"
Repository = "https://github.com/quanttraderkim/instructionguard"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
